# protobuf-cpp

./: .gitignore  CMakeLists.txt
src/: main_plugin.cpp
src/include/: protobuf-cpp.hpp
src/include/protobuf-cpp/: protobuf-cpp.hpp
src/test/: test.cpp
src/test/protobufs/: simple.proto
